
    * ``Transport.get_shared_medium`` is deprecated.  Use
      ``Transport.get_smart_medium`` instead.  (Andrew Bennetts)

    * ``VersionedFile`` factories now accept a get_scope parameter rather
      than using a call to ``transaction_finished``, allowing the removal of
      the fixed list of versioned files per repository. (Robert Collins)

    * ``VersionedFile.clone_text`` is deprecated. This performance optimisation
      is no longer used - reading the content of a file that is undergoing a
      file level merge to identical state on two branches is rare enough, and
      not expensive enough to special case. (Robert Collins)

    * ``VersionedFile.clear_cache`` and ``enable_cache`` are deprecated.
      These methods added significant complexity to the ``VersionedFile``
      implementation, but were only used for optimising fetches from knits - 
      which can be done from outside the knit layer, or via a caching
      decorator. As knits are not the default format, the complexity is no
      longer worth paying. (Robert Collins)

    * ``VersionedFile.create_empty`` is removed. This method presupposed a
      sensible mapping to a transport for individual files, but pack backed
      versioned files have no such mapping. (Robert Collins)

    * ``VersionedFile.get_graph`` is deprecated, with no replacement method.
      The method was size(history) and not desirable. (Robert Collins)

    * ``VersionedFile.get_graph_with_ghosts`` is deprecated, with no
      replacement method.  The method was size(history) and not desirable.
      (Robert Collins)

    * ``VersionedFile.get_parents`` is deprecated, please use
      ``VersionedFile.get_parent_map``. (Robert Collins)

    * ``VersionedFile.get_sha1`` is deprecated, please use
      ``VersionedFile.get_sha1s``. (Robert Collins)

    * ``VersionedFile.has_ghost`` is now deprecated, as it is both expensive
      and unused outside of a single test. (Robert Collins)
